k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8sa-service
spec:
  selector:
    app: k8sa
  ports:
  - port: 80
    targetPort: 5000
  type: ClusterIP
