k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8sa-ingress
spec:
  rules:
  - host: k8sa.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8sa-service
            port:
              number: 80
